--- a/src/main/resources/templates/Docente/Docenteslist.html
+++ b/src/main/resources/templates/Docente/Docenteslist.html
@@ -204,8 +204,8 @@
                                                                                         <td th:text="${atv.direcciondocente}">placeholder</td>
                                                                                         <td>
                                                                                             <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Admin/Docentes/edit/}+${atv.iddocente}"><i class="icon_check_alt2"></i></a>
-                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Docentes/delete}+${atv.iddocente}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-success" th:href="@{/Docente/Docentes/edit/}+${atv.iddocente}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-danger" th:href="@{/Docente/Docentes/delete}+${atv.iddocente}"><i class="icon_check_alt2"></i></a>
                                                                                             </div>
                                                                                         </td>
                                                                                     </tr>
