--- a/src/main/resources/templates/Docente/EntregaTareaslist.html
+++ b/src/main/resources/templates/Docente/EntregaTareaslist.html
@@ -174,7 +174,7 @@
                                                                 <div class="row">
                                                                     <div class="col-lg-11">
                                                                         <section class="panel">
-                                                                            <a class="btn btn-success" th:href="@{/Admin/EntregaTareas/Create}" title="Bootstrap 3 themes generator">Nuevo</a>
+                                                                            <a class="btn btn-success" th:href="@{/Docente/EntregaTareas/Create}" title="Bootstrap 3 themes generator">Nuevo</a>
                                                                             <header class="panel-heading">
                                                                                 Tabla Docente
                                                                             </header>
@@ -204,8 +204,8 @@
               <td scope="row" th:text="${atv.fechaentrega}">cuenta</td>
                                                                                         <td>
                                                                                             <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Admin/Docentes/edit/}+${atv.identregatareas}"><i class="icon_check_alt2"></i></a>
-                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Docentes/delete}+${atv.identregatareas}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-success" th:href="@{/Docente/Docentes/edit/}+${atv.identregatareas}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-danger" th:href="@{/Docente/Docentes/delete}+${atv.identregatareas}"><i class="icon_check_alt2"></i></a>
                                                                                             </div>
                                                                                         </td>
                                                                                     </tr>
