--- a/src/main/resources/templates/Docente/Estudiantelist.html
+++ b/src/main/resources/templates/Docente/Estudiantelist.html
@@ -207,8 +207,8 @@
               <td th:text="${atv.representanteid.apellidos}+ ${atv.representanteid.nombres}">placeholder</td>
                                                                                         <td>
                                                                                             <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Admin/Estudiante/edit/}+${atv.idestudiante}"><i class="icon_check_alt2"></i></a>
-                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Estudiante/delete}+${atv.idestudiante}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-success" th:href="@{/Docente/Estudiante/edit/}+${atv.idestudiante}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-danger" th:href="@{/Docente/Estudiante/delete}+${atv.idestudiante}"><i class="icon_check_alt2"></i></a>
                                                                                             </div>
                                                                                         </td>
                                                                                     </tr>
