--- a/src/main/resources/templates/Docente/Evaluacionlist.html
+++ b/src/main/resources/templates/Docente/Evaluacionlist.html
@@ -173,7 +173,7 @@
                                                                 <!-- page start-->
                                                                 <div class="row">
                                                                     <div class="col-lg-12">
-                                                                         <a class="btn btn-success" th:href="@{/Admin/Evaluacion/Create}" title="Bootstrap 3 themes generator">Nueva Evaluacion</a>
+                                                                         <a class="btn btn-success" th:href="@{/Docente/Evaluacion/Create}" title="Bootstrap 3 themes generator">Nueva Evaluacion</a>
                                                                         <section class="panel">
                                                                             <header class="panel-heading">
                                                                                 Tabla Docente
@@ -206,8 +206,8 @@
                                                                                         <td th:text="${atv.fechaevaluacion}">placeholder</td>
                                                                                         <td>
                                                                                             <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Admin/Evaluacion/edit/}+${atv.idevaluacion}"><i class="icon_check_alt2"></i></a>
-                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Evaluacion/delete}+${atv.idevaluacion}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-success" th:href="@{/Docente/Evaluacion/edit/}+${atv.idevaluacion}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-danger" th:href="@{/Docente/Evaluacion/delete}+${atv.idevaluacion}"><i class="icon_check_alt2"></i></a>
                                                                                             </div>
                                                                                         </td>
                                                                                     </tr>
