--- a/src/main/resources/templates/Docente/MaterialDidacticolist.html
+++ b/src/main/resources/templates/Docente/MaterialDidacticolist.html
@@ -173,7 +173,7 @@
                                                                 <!-- page start-->
                                                                 <div class="row">
                                                                     <div class="col-lg-12">
-                                                                         <a class="btn btn-success" th:href="@{/Admin/Material.Didactico/Create}" title="Bootstrap 3 themes generator">Nueva Inscripcion</a>
+                                                                         <a class="btn btn-success" th:href="@{/Docente/Material.Didactico/Create}" title="Bootstrap 3 themes generator">Nueva Inscripcion</a>
                                                                         <section class="panel">
                                                                             <header class="panel-heading">
                                                                                 Tabla Inscripciones
@@ -202,8 +202,8 @@
                                                                                        <td th:text="${atv.iddocente.apellidosdocente}">placeholder</td>
                                                                                         <td>
                                                                                             <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Admin/Inscripciones/edit/}+${atv.idinscripcion}"><i class="icon_check_alt2"></i></a>
-                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Inscripciones/delete}+${atv.idinscripcion}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-success" th:href="@{/Docente/Inscripciones/edit/}+${atv.idinscripcion}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-danger" th:href="@{/Docente/Inscripciones/delete}+${atv.idinscripcion}"><i class="icon_check_alt2"></i></a>
                                                                                             </div>
                                                                                         </td>
                                                                                     </tr>
