--- a/src/main/resources/templates/Docente/Pagoslist.html
+++ b/src/main/resources/templates/Docente/Pagoslist.html
@@ -172,7 +172,7 @@
                                                                 </div>
                                                                 <!-- page start-->
                                                                 <div class="row">
-                                                                    <a class="btn btn-success" th:href="@{/Admin/Pagos/Create}" title="Bootstrap 3 themes generator">Nueva Matricula</a>
+                                                                    <a class="btn btn-success" th:href="@{/Docente/Pagos/Create}" title="Bootstrap 3 themes generator">Nueva Matricula</a>
                                                                     <div class="col-lg-12">
                                                                         <section class="panel">
                                                                             <header class="panel-heading">
@@ -201,8 +201,8 @@
               <td scope="row" th:text="${atv.estado}">cuenta</td>
               <td scope="row" th:text="${atv.fechapago}">cuenta</td>                                  <td>
                                                                                             <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Admin/Pagos/edit/}+${atv.idpagos}"><i class="icon_check_alt2"></i></a>
-                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Pagos/delete}+${atv.idpagos}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-success" th:href="@{/Docente/Pagos/edit/}+${atv.idpagos}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-danger" th:href="@{/Docente/Pagos/delete}+${atv.idpagos}"><i class="icon_check_alt2"></i></a>
                                                                                             </div>
                                                                                         </td>
                                                                                     </tr>
