--- a/src/main/resources/templates/Docente/DocentesAdd.html
+++ b/src/main/resources/templates/Docente/DocentesAdd.html
@@ -216,7 +216,7 @@
                                                                     <small></small>
                                                              </div><br/>
                                                             <input class="w-auto btn btn-lg btn-primary" type="submit" value="Guardar"/>
-                                                            <a th:href="@{/Admin/Docentes/listar}"><input class="w-auto btn btn-lg btn-primary" type="button" value="Cancelar"/></a>
+                                                            <a th:href="@{/Docente/Docentes/listar}"><input class="w-auto btn btn-lg btn-primary" type="button" value="Cancelar"/></a>
                                                         </form>
                                                                                     <!-- page end-->
                                                                                     </section>
