--- a/src/main/resources/templates/Docente/MaterialDidacticoadd.html
+++ b/src/main/resources/templates/Docente/MaterialDidacticoadd.html
@@ -175,7 +175,7 @@
                                                                     <div class="col-lg-12">
                                                                         <section class="panel">
                                                                             <h2 th:text="${titulo}">Section title</h2>
-<form  th:object="${material}" class="form-group " th:action="@{/Admin/Material.Didactico/save}" method="post"> 
+<form  th:object="${material}" class="form-group " th:action="@{/Docente/Material.Didactico/save}" method="post"> 
                                                             <div class="form-group">
                                                                 <input th:field="*{idmaterialdidactico}" type="hidden"/>
                                                                 <label class="col-md-2" for="nombres">Descripcion</label>
@@ -211,7 +211,7 @@
                                                             </div>
                                                             <br/>
                                                             <input class="w-auto btn btn-lg btn-primary" type="submit" value="Guardar"/>
-                                                            <a th:href="@{/Admin/Material.Didactico/listar}"><input class="w-auto btn btn-lg btn-primary" type="button" value="Cancelar"/></a>
+                                                            <a th:href="@{/Docente/Material.Didactico/listar}"><input class="w-auto btn btn-lg btn-primary" type="button" value="Cancelar"/></a>
                                                         </form>
                                                                                     <!-- page end-->
                                                                                     </section>
