--- a/src/main/resources/templates/Docente/PagosAdd.html
+++ b/src/main/resources/templates/Docente/PagosAdd.html
@@ -176,7 +176,7 @@
                                                                         <section class="panel">
                                                                             <h2 th:text="${titulo}">Section title</h2>
 
-                                                                            <form class="form-control col-md-12" th:object="${pagos}" th:action="@{/Admin/Pagos/save}" method="post"> 
+                                                                            <form class="form-control col-md-12" th:object="${pagos}" th:action="@{/Docente/Pagos/save}" method="post"> 
                                                                                 <div class="form-group">
                                                                                     <input th:field="*{idpagos}" type="hidden"/>
                                                                                     <label class="col-md-2" for="detallepago">Detalle Pago</label>
@@ -212,7 +212,7 @@
                                                                                 </div>
                                                                                 <br/>
                                                                                 <input class="w-auto btn btn-lg btn-primary" type="submit" value="Guardar"/>
-                                                                                <a th:href="@{/Admin/Pagos/listar}"><input class="w-auto btn btn-lg btn-primary" type="button" value="Cancelar"/></a>
+                                                                                <a th:href="@{/Docente/Pagos/listar}"><input class="w-auto btn btn-lg btn-primary" type="button" value="Cancelar"/></a>
                                                                             </form>
                                                                             <!-- page end-->
                                                                         </section>
