--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,7 +41,7 @@
     
 <main class="form-signin">
     <form th:action="@{/init}" method="post">
-    <img class="mb-4" th:src="@{/img/workspace_50px.png}" alt="" width="100" height="100">
+    <img class="mb-4" th:src="@{/img/logo-big.png}" alt="" width="100" height="100">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
@@ -59,7 +59,7 @@
       </label>
     </div>
     <input  class="w-100 btn btn-lg btn-primary" type="submit" value="Sign in"/>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    <p class="mt-5 mb-3 text-muted">&copy; 2021–2023</p>
   </form>
 </main>
 
