--- a/src/main/resources/templates/Administrator/Asignacionesadd.html
+++ b/src/main/resources/templates/Administrator/Asignacionesadd.html
@@ -52,7 +52,7 @@
                                                             </div>
 
                                                             <!--logo start-->
-                                                            <a href="@{/init}" class="logo">Nice <span class="lite">Admin</span></a>
+                                                            <a th:href="@{/init}" class="logo">System <span class="lite">SGA</span></a>
                                                             <!--logo end-->
 
                                                             <div class="nav search-row" id="top_menu">
