--- a/src/main/resources/templates/Administrator/Docenteslist.html
+++ b/src/main/resources/templates/Administrator/Docenteslist.html
@@ -11,7 +11,7 @@
                         <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
                             <link rel="shortcut icon" th:href="@{/img/favicon.png}">
 
-                                <title>Blank | Creative - Bootstrap 3 Responsive Admin Template</title>
+                                <title th:text="${title}">Blank | Creative - Bootstrap 3 Responsive Admin Template</title>
 
                                 <link rel="canonical" href="https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/">
                                     <!-- Bootstrap CSS -->
@@ -52,7 +52,7 @@
                                                             </div>
 
                                                             <!--logo start-->
-                                                            <a href="@{/init}" class="logo">Nice <span class="lite">Admin</span></a>
+                                                            <a href="@{/init}" class="logo" >System <span class="lite">SGA</span></a>
                                                             <!--logo end-->
 
                                                             <div class="nav search-row" id="top_menu">
